2000-07-23  Ettore Perazzoli  <ettore@helixcode.com>

	* mail-ops.c (create_message_composer): New.
	(compose_msg): Use it.
	(send_to_url): Likewise.
	(forward_msg): Likewise.

	* folder-browser-factory.c (control_activate): Use `_()' instead
	of `N_()'.

2000-07-20  Ettore Perazzoli  <ettore@helixcode.com>

	* component-factory.c (factory_fn): Updated for the new
	`evolution_shell_component_new()' arg.

2000-07-19  Jeffrey Stedfast  <fejj@helixcode.com>

	* message-thread.c (thread_messages): What if message info is NULL?

2000-07-16  Jeffrey Stedfast <fejj@helixcode.com>

	* folder-browser.c, component-factory.c: Initial code to support
	IMAP folders that don't use "/" as a directory separator.

2000-07-15  Ettore Perazzoli  <ettore@helixcode.com>

	* mail-ops.c (set_x_mailer_header): New helper function to set the
	`X-Mailer:' header to to `Evolution <version> [Developer
	Preview]".
	(real_send_mail): Call it.

2000-07-14  Ettore Perazzoli  <ettore@helixcode.com>

	* Makefile.am (evolution_mail_LDADD): Add `GCONF_LIBS'.

2000-07-14  Dan Winship  <danw@helixcode.com>

	* mail-format.c (write_headers): put a <p> at the end of the
	header table. (I think there used to be whitespace after it, but
	then some gtkhtml change got rid of it...)
	(handle_text_plain): Don't do this <PRE>. Instead, CONVERT_NL and
	CONVERT_SPACES and wrap it in <TT>. Now if the sender didn't
	include any newlines, it will be wrapped to the width of the
	window instead of extending off into infinity.

2000-07-13  Dan Winship  <danw@helixcode.com>

	* message-list.c (message_list_destroy): Only unref the folder if
	it's been set.

	* folder-browser.c (folder_browser_destroy): Only sync the folder
	if it's been set.

2000-07-13  Jonathan Blandford  <jrb@redhat.com>

	* mail-config.c (create_transport):
	s/CAMEL_SERVICE_NEED_HOST/CAMEL_SERVICE_URL_NEED_HOST.

2000-07-13  Dan Winship  <danw@helixcode.com>

	* mail-config.c (add_row): Add a "gboolean required" argument, and