@@ -13,56 +13,13 @@
 #include <bonobo/bonobo-object-directory.h>
 #include <glade/glade.h>
 #include <gconf/gconf.h>
+#include <liboaf/liboaf.h>
 
 #include "e-util/e-gui-utils.h"
 #include "e-util/e-cursors.h"
 
 #include "component-factory.h"
 #include "mail.h"
-
-#ifdef USING_OAF
-
-#include <liboaf/liboaf.h>
-
-static void
-init_corba (int *argc, char *argv [])
-{
-	od_assert_using_oaf ();
-	gnome_init_with_popt_table ("evolution-mail-component", VERSION,
-				    *argc, argv, oaf_popt_options, 0, NULL);
-	oaf_init (*argc, argv);
-}
-
-#else  /* USING_OAF */
-
-#include <libgnorba/gnorba.h>
-
-static void
-init_corba (int *argc, char *argv [])
-{
-	CORBA_Environment ev;
-
-	od_assert_using_goad ();
-	CORBA_exception_init (&ev);
-
- 	gnome_CORBA_init_with_popt_table (
-		"evolution-mail-component", "1.0",
-		argc, argv, NULL, 0, NULL, GNORBA_INIT_SERVER_FUNC, &ev);
-
-	CORBA_exception_free (&ev);
-}
-
-#endif /* USING_OAF */
-
-static void
-init_bonobo (void)
-{
-	if (bonobo_init (CORBA_OBJECT_NIL, CORBA_OBJECT_NIL, CORBA_OBJECT_NIL) == FALSE){
-		e_notice (NULL, GNOME_MESSAGE_BOX_ERROR,
-			  _("Mail Component: I could not initialize Bonobo"));
-		exit (1);
-	}
-}
 
 int
 main (int argc, char *argv [])
@@ -73,8 +30,20 @@ main (int argc, char *argv [])
 #ifdef USE_BROKEN_THREADS
 	g_thread_init( NULL );
 #endif
-	init_corba (&argc, argv);
-	init_bonobo ();
+
+	od_assert_using_oaf ();
+	gnome_init_with_popt_table ("evolution-mail-component", VERSION,
+				    argc, argv, oaf_popt_options, 0, NULL);
+	oaf_init (argc, argv);
+
+	if (bonobo_init (CORBA_OBJECT_NIL, CORBA_OBJECT_NIL,
+			 CORBA_OBJECT_NIL) == FALSE) {
+		g_error ("Mail component could not initialize Bonobo.\n"
+			 "If there was a warning message about the "
+			 "RootPOA, it probably means\nyou compiled "
+			 "Bonobo against GOAD instead of OAF.");
+	}
+
 	gconf_init (argc, argv, NULL);
 
 	glade_gnome_init ();
